--- a/model/model-home/src/main/res/values-night/themes.xml
+++ b/model/model-home/src/main/res/values-night/themes.xml
@@ -11,6 +11,8 @@
         <item name="colorOnSecondary">@color/home_black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >?attr/colorPrimaryVariant</item>
+        <!--导航栏颜色-->
+        <item name="android:navigationBarColor">@color/home_black</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
