--- a/app/src/app/res/drawable-xxhdpi/app_background_bg_banyuan.xml
+++ b/app/src/app/res/drawable-xxhdpi/app_background_bg_banyuan.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="21dp" />
-    <solid android:color="@color/moccasin" />
+    <solid android:color="@color/color_orange_A100" />
 
 </shape>
