--- a/model/model-home/src/main/res/layout/home_fragment_page_3.xml
+++ b/model/model-home/src/main/res/layout/home_fragment_page_3.xml
@@ -16,15 +16,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:padding="20dp">
+            android:orientation="vertical">
 
 
             <Button
                 android:id="@+id/bt_kotlin_base"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:gravity="center"
                 android:text="@string/home_bt_text_kotlin1"
                 android:textAllCaps="false" />
