--- a/model/model-home/src/main/res/menu/home_bottom_menu.xml
+++ b/model/model-home/src/main/res/menu/home_bottom_menu.xml
@@ -3,20 +3,20 @@
     <item
         android:id="@+id/menu1"
         android:icon="@drawable/ic_menu_one_un"
-        android:title="页面1" />
+        android:title="@string/home_navigation_name_1" />
 
     <item
         android:id="@+id/menu2"
         android:icon="@drawable/ic_menu_two_un"
-        android:title="页面2" />
+        android:title="@string/home_navigation_name_2" />
 
     <item
         android:id="@+id/menu3"
         android:icon="@drawable/ic_menu_three_un"
-        android:title="页面3" />
+        android:title="@string/home_navigation_name_3" />
 
     <item
         android:id="@+id/menu4"
         android:icon="@drawable/ic_menu_four_un"
-        android:title="页面4" />
+        android:title="@string/home_navigation_name4_" />
 </menu>
