--- a/model/model-home/src/main/res/layout/home_fragment_page_1.xml
+++ b/model/model-home/src/main/res/layout/home_fragment_page_1.xml
@@ -2,6 +2,7 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/fragment_parent_1"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:overScrollMode="never"
