--- a/model/model-home/src/main/res/layout/home_fragment_page_4.xml
+++ b/model/model-home/src/main/res/layout/home_fragment_page_4.xml
@@ -11,7 +11,8 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_scrollFlags="scroll">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:toolbarId="@id/fragment4_toolbar">
 
             <ImageView
                 android:layout_width="match_parent"
@@ -21,15 +22,22 @@
                 android:src="@drawable/pic_me"
                 app:layout_collapseMode="parallax"
                 app:layout_collapseParallaxMultiplier="0.5" />
+
+            <LinearLayout
+                android:id="@+id/fragment4_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="哈哈哈啊哈"
+                    android:textColor="@color/color_white"
+                    app:layout_collapseMode="pin" />
+            </LinearLayout>
+
         </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-
-        <androidx.appcompat.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:title="标题" />
-
-
     </com.google.android.material.appbar.AppBarLayout>
 
 
