--- a/model/model-home/src/main/res/layout/home_fragment_page_4.xml
+++ b/model/model-home/src/main/res/layout/home_fragment_page_4.xml
@@ -5,9 +5,10 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
-        app:elevation="0dp"
+        android:id="@+id/fragment4_appbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:elevation="0dp">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
