--- a/model/model-home/src/main/res/layout/home_fragment_page_4.xml
+++ b/model/model-home/src/main/res/layout/home_fragment_page_4.xml
@@ -4,6 +4,7 @@
 常用支持滑动效果的子View有：比如RecyclerView，NestedScrollView、TabLayout等  切记ScrollView是无效的！-->
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/fragment4_custom_coordinator"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <!--AppBarLayout是一个vertical的LinearLayout，其子View应通过setScrollFlags(int)或者xmL中的app:layout_scrollFlags来提供他们的Behavior。
@@ -14,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/color_red_500"
-        android:elevation="0dp">
+        android:elevation="0dp"
+        app:layout_behavior="com.model.home.pages.widget.AppbarZoomBehavior">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
@@ -24,6 +26,7 @@
             <!--圆角-->
             <!--app:shapeAppearanceOverlay="@style/Home_roundedCornerImageStyle" -->
             <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/fragment4_imageview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
@@ -52,6 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
+        android:overScrollMode="never"
         android:scrollbars="none"
         app:behavior_overlapTop="40dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
