--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,18 +3,18 @@
     <style name="APPTheme.BaseApplication" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
         <!-- Primary brand color. -->
         <!--您的应用的主要品牌颜色，主要用于主题-->
-        <item name="colorPrimary">@color/color_purple_200</item>
+        <item name="colorPrimary">@color/common_color_purple_200</item>
         <!--您的主要品牌颜色的较浅/较暗变体，在主题中很少使用-->
-        <item name="colorPrimaryVariant">@color/color_purple_700</item>
+        <item name="colorPrimaryVariant">@color/common_color_purple_700</item>
         <!--用于显示在原色上方的元素的颜色（例如，文本和图标，根据可访问性，通常为白色或半透明的黑色）-->
-        <item name="colorOnPrimary">@color/color_white</item>
+        <item name="colorOnPrimary">@color/common_color_white</item>
         <!-- Secondary brand color. -->
         <!--您应用程式的次要品牌色彩，主要用于强调某些需要突出的小部件-->
-        <item name="colorSecondary">@color/color_teal_200</item>
+        <item name="colorSecondary">@color/common_color_teal_200</item>
         <!--您的次要品牌颜色的较浅/较深变体，在主题中很少使用-->
-        <item name="colorSecondaryVariant">@color/color_teal_200</item>
+        <item name="colorSecondaryVariant">@color/common_color_teal_200</item>
         <!--用于显示在辅助颜色顶部的元素的颜色-->
-        <item name="colorOnSecondary">@color/color_white</item>
+        <item name="colorOnSecondary">@color/common_color_white</item>
         <!--用于显示在错误颜色顶部的元素的颜色-->
         <item name="colorError">#F44336</item>
         <!--用于显示在错误颜色顶部的元素的颜色-->
@@ -22,13 +22,13 @@
         <!--用于表面的颜色（即材料“纸张”）-->
         <item name="colorSurface">#FFFFFF</item>
         <!--用于显示在表面颜色顶部的元素的颜色-->
-        <item name="colorOnSurface">@color/color_white</item>
+        <item name="colorOnSurface">@color/common_color_white</item>
         <!--所有其他屏幕内容后面的颜色-->
-        <item name="android:colorBackground">@color/color_white</item>
+        <item name="android:colorBackground">@color/common_color_white</item>
         <!--用于显示在背景色上方的元素的颜色-->
-        <item name="colorOnBackground">@color/color_white</item>
+        <item name="colorOnBackground">@color/common_color_white</item>
         <!--背景色-->
-        <item name="android:windowBackground">@color/color_white</item>
+        <item name="android:windowBackground">@color/common_color_white</item>
     </style>
 
     <!--更新自定义界面的主题样式-->
