--- a/model/model-airpods/src/main/res/drawable/airpods_ic_airpods.xml
+++ b/model/model-airpods/src/main/res/drawable/airpods_ic_airpods.xml
@@ -7,10 +7,10 @@
         android:translateX="-1.8550725"
         android:translateY="-1.8550725">
         <path
-            android:fillColor="@color/color_black"
+            android:fillColor="@color/common_color_black"
             android:pathData="M725.33,551.13V874.67a64,64 0,0 1,-128 0v-385.19a255.15,255.15 0,0 0,128 61.65zM426.67,489.47V874.67a64,64 0,0 1,-128 0v-323.54a255.15,255.15 0,0 0,128 -61.65z" />
         <path
-            android:fillColor="@color/color_black"
+            android:fillColor="@color/common_color_black"
             android:pathData="M768,512a213.33,213.33 0,1 1,0 -426.67,213.33 213.33,0 0,1 0,426.67zM629.33,277.33a32,32 0,1 0,0 64h21.33a32,32 0,1 0,0 -64h-21.33zM896,213.33a42.67,42.67 0,0 0,-42.67 42.67v85.33a42.67,42.67 0,0 0,85.33 0L938.67,256a42.67,42.67 0,0 0,-42.67 -42.67zM256,512A213.33,213.33 0,1 1,256 85.33a213.33,213.33 0,0 1,0 426.67zM373.33,277.33a32,32 0,0 0,0 64h21.33a32,32 0,0 0,0 -64h-21.33zM128,213.33a42.67,42.67 0,0 0,-42.67 42.67v85.33a42.67,42.67 0,1 0,85.33 0L170.67,256a42.67,42.67 0,0 0,-42.67 -42.67z" />
     </group>
 </vector>
