--- a/model/model-airpods/src/main/res/layout/airpods_layout_popup.xml
+++ b/model/model-airpods/src/main/res/layout/airpods_layout_popup.xml
@@ -20,7 +20,7 @@
         android:layout_height="56dp"
         android:gravity="center"
         android:text="未连接airpods"
-        android:textColor="@color/color_black"
+        android:textColor="@color/common_color_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -93,7 +93,7 @@
         android:layout_height="32dp"
         android:gravity="center"
         android:text="-"
-        android:textColor="@color/color_black"
+        android:textColor="@color/common_color_black"
         app:layout_constraintEnd_toEndOf="@id/iv_left_pod"
         app:layout_constraintStart_toStartOf="@id/iv_left_pod"
         app:layout_constraintTop_toBottomOf="@id/iv_left_pod"
@@ -117,7 +117,7 @@
         android:layout_height="32dp"
         android:gravity="center"
         android:text="-"
-        android:textColor="@color/color_black"
+        android:textColor="@color/common_color_black"
         app:layout_constraintEnd_toEndOf="@id/iv_right_pod"
         app:layout_constraintStart_toStartOf="@id/iv_right_pod"
         app:layout_constraintTop_toBottomOf="@id/iv_right_pod"
@@ -141,7 +141,7 @@
         android:layout_height="32dp"
         android:gravity="center"
         android:text="-"
-        android:textColor="@color/color_black"
+        android:textColor="@color/common_color_black"
         app:layout_constraintEnd_toEndOf="@id/iv_case"
         app:layout_constraintStart_toStartOf="@id/iv_case"
         app:layout_constraintTop_toBottomOf="@id/iv_case"
