--- a/model/model-home/src/main/res/layout/home_activity_main.xml
+++ b/model/model-home/src/main/res/layout/home_activity_main.xml
@@ -5,7 +5,7 @@
     android:id="@+id/layout_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/shape_gradual"
+    android:background="@drawable/home_shape_gradual"
     tools:context=".HomeMainActivity"
     tools:openDrawer="start">
 
@@ -52,7 +52,7 @@
                 android:id="@+id/constraintLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/color_white"
+                android:background="@color/common_color_white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +71,7 @@
                     android:id="@+id/bottomBar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/color_white"
+                    android:background="@color/common_color_white"
                     app:labelVisibilityMode="labeled"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -118,7 +118,7 @@
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:text="个人中心"
-                android:textColor="@color/color_white" />
+                android:textColor="@color/common_color_white" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -129,7 +129,7 @@
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:text="意见反馈"
-                android:textColor="@color/color_white" />
+                android:textColor="@color/common_color_white" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -140,7 +140,7 @@
                 android:paddingStart="10dp"
                 android:paddingEnd="10dp"
                 android:text="支持一下"
-                android:textColor="@color/color_white" />
+                android:textColor="@color/common_color_white" />
 
         </LinearLayout>
     </LinearLayout>
